--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -8,21 +8,21 @@
   },
   "devDependencies": {
     "@sparticuz/chromium": "^114.0.0",
-    "@types/aws-lambda": "^8.10.123",
+    "@types/aws-lambda": "^8.10.124",
     "@types/bcryptjs": "^2.4.4",
     "@types/busboy": "^1.5.1",
-    "@types/node": "^20.8.2",
+    "@types/node": "^20.8.6",
     "@types/nodemailer": "^6.4.11",
-    "sst": "2.26.11",
+    "sst": "2.29.2",
     "vitest": "^0.33.0"
   },
   "dependencies": {
     "@apple/app-store-server-library": "^0.1.1",
-    "@middy/core": "^4.6.4",
-    "@middy/http-cors": "^4.6.4",
-    "@middy/http-error-handler": "^4.6.4",
-    "@revelationsai/core": "*",
-    "ai": "^2.2.14",
+    "@middy/core": "^4.6.5",
+    "@middy/http-cors": "^4.6.5",
+    "@middy/http-error-handler": "^4.6.5",
+    "@revelationsai/core": "^1.0.0",
+    "ai": "^2.2.15",
     "bcryptjs": "^2.4.3",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
@@ -30,11 +30,11 @@
     "firebase-admin": "^11.11.0",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.6.0",
-    "openai": "^4.11.1",
+    "openai": "^4.12.1",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
     "puppeteer-core": "^20.9.0",
-    "stripe": "^13.9.0",
+    "stripe": "^13.10.0",
     "validator": "^13.11.0"
   }
 }
