--- a/.github/workflows/pr-preview.yaml
+++ b/.github/workflows/pr-preview.yaml
@@ -65,6 +65,9 @@ env:
   STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
   STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
 
+  NEW_RELIC_ACCOUNT_ID: ${{ vars.NEW_RELIC_ACCOUNT_ID }}
+  NEW_RELIC_TRUSTED_ACCOUNT_KEY: ${{ vars.NEW_RELIC_TRUSTED_ACCOUNT_KEY }}
+
   ENCODED_FIREBASE_JSON: ${{ secrets.ENCODED_FIREBASE_JSON }}
 
 jobs:
