--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   quiver: ^3.2.1
   another_flushbar: ^1.12.30
   visibility_detector: ^0.4.0+2
+  newrelic_mobile: ^1.0.4
 
 dev_dependencies:
   flutter_test:
