--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -19,7 +19,10 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@apollo/utils.keyvadapter": "^3.1.0",
     "@as-integrations/aws-lambda": "^3.1.0",
+    "@graphql-tools/utils": "^10.1.0",
+    "@keyv/redis": "^2.8.4",
     "@middy/core": "^5.2.4",
     "@middy/http-cors": "^5.2.4",
     "@middy/http-error-handler": "^5.2.4",
@@ -33,6 +36,8 @@
     "fast-xml-parser": "^4.3.4",
     "firebase-admin": "^12.0.0",
     "graphql": "^16.8.1",
+    "graphql-tools": "^9.0.1",
+    "keyv": "^4.5.4",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.7.0",
     "nodemailer": "^6.9.9",
