--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -9,10 +9,10 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sparticuz/chromium": "^121.0.0",
+    "@sparticuz/chromium": "^122.0.0",
     "@types/aws-lambda": "^8.10.134",
     "@types/busboy": "^1.5.3",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.11.21",
     "@types/nodemailer": "^6.4.14",
     "sst": "2.40.3",
     "vitest": "^1.3.1"
@@ -21,6 +21,7 @@
     "@apollo/server": "^4.10.0",
     "@apollo/utils.keyvadapter": "^3.1.0",
     "@as-integrations/aws-lambda": "^3.1.0",
+    "@escape.tech/graphql-armor": "^2.4.0",
     "@graphql-tools/utils": "^10.1.0",
     "@keyv/redis": "^2.8.4",
     "@middy/core": "^5.2.4",
@@ -29,23 +30,23 @@
     "@revelationsai/core": "workspace:*",
     "@revelationsai/server": "workspace:*",
     "@upstash/redis": "^1.28.4",
-    "ai": "^2.2.35",
-    "argon2": "^0.31.2",
+    "ai": "^2.2.37",
+    "argon2": "^0.40.1",
     "busboy": "^1.6.0",
     "escape-string-regexp": "^5.0.0",
-    "fast-xml-parser": "^4.3.4",
+    "fast-xml-parser": "^4.3.5",
     "firebase-admin": "^12.0.0",
     "graphql": "^16.8.1",
     "graphql-tools": "^9.0.1",
     "keyv": "^4.5.4",
     "lambda-stream": "^0.5.0",
     "mammoth": "^1.7.0",
-    "nodemailer": "^6.9.9",
+    "nodemailer": "^6.9.10",
     "openai": "^4.28.0",
     "pdf-parse": "^1.1.1",
     "pug": "^3.0.2",
-    "puppeteer-core": "^22.1.0",
-    "stripe": "^14.17.0",
+    "puppeteer-core": "^22.3.0",
+    "stripe": "^14.18.0",
     "uuid": "^9.0.1",
     "validator": "^13.11.0",
     "web-streams-polyfill": "^3.3.3",
