--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -52,7 +52,9 @@
 		"@revelationsai/client": "workspace:*",
 		"@revelationsai/core": "workspace:*",
 		"@revelationsai/server": "workspace:*",
+		"@tanstack/match-sorter-utils": "^8.11.8",
 		"@tanstack/svelte-query": "^5.24.1",
+		"@tanstack/svelte-table": "^8.13.2",
 		"ai": "^2.2.37",
 		"autosize": "^6.0.1",
 		"dayjs": "^1.11.10",
@@ -60,6 +62,7 @@
 		"graphql-request": "^6.1.0",
 		"marked": "^12.0.0",
 		"stripe": "^14.18.0",
+		"svelte-writable-derived": "^3.1.0",
 		"uuid": "^9.0.1",
 		"validator": "^13.11.0"
 	}
