--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@apollo/server-plugin-response-cache": "^4.1.3",
     "@apollo/utils.keyvadapter": "^3.1.0",
     "@apollo/utils.keyvaluecache": "^3.1.0",
     "@as-integrations/aws-lambda": "^3.1.0",
