--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -9,14 +9,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "typeRoots": ["./src/lib/types"],
-    "plugins": [
-      {
-        "name": "@0no-co/graphqlsp",
-        "schema": "../../graphql/schema.graphql",
-        "tadaOutputLocation": "../../graphql/"
-      }
-    ]
+    "typeRoots": ["./src/lib/types"]
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
   //
