--- a/.env.example
+++ b/.env.example
@@ -15,21 +15,14 @@ UNSTRUCTURED_API_KEY=
 # OpenAI
 OPENAI_API_KEY=
 
-# Google AI
-GOOGLE_API_KEY=
-
-# Fireworks AI
-FIREWORKS_API_KEY=
+# Anthropic
+ANTHROPIC_API_KEY=
 
 # Revenue Cat
 REVENUECAT_PROJECT_ID=766c423b
 REVENUECAT_API_KEY=
 REVENUECAT_WEBHOOK_SECRET=
 REVENUECAT_STRIPE_API_KEY=
-
-# Google APIs
-GOOGLE_API_KEY=
-GOOGLE_CSE_ID=37e80745c342b4d31
 
 # Apple Auth
 APPLE_CLIENT_ID=com.passgoco.revelationsai.signin
