--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@aws-sdk/client-sqs": "^3.540.0",
     "@aws-sdk/credential-providers": "^3.540.0",
     "@aws-sdk/s3-request-presigner": "^3.540.0",
+    "@langchain/anthropic": "^0.1.9",
     "@langchain/community": "^0.0.43",
-    "@langchain/google-genai": "^0.0.10",
     "@langchain/openai": "^0.0.24",
     "@neondatabase/serverless": "^0.9.0",
     "drizzle-orm": "^0.30.5",
