--- a/.github/workflows/pr-preview-cleanup.yaml
+++ b/.github/workflows/pr-preview-cleanup.yaml
@@ -17,9 +17,7 @@ env:
 
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-  GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-
-  FIREWORKS_API_KEY: ${{ secrets.FIREWORKS_API_KEY }}
+  ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
 
   REVENUECAT_PROJECT_ID: ${{ vars.REVENUECAT_PROJECT_ID }}
   REVENUECAT_API_KEY: ${{ secrets.REVENUECAT_API_KEY }}
