--- a/.github/workflows/prod-deploy.yaml
+++ b/.github/workflows/prod-deploy.yaml
@@ -24,6 +24,8 @@ env:
 
   OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
+  ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+
   REVENUECAT_PROJECT_ID: ${{ vars.REVENUECAT_PROJECT_ID }}
   REVENUECAT_API_KEY: ${{ secrets.REVENUECAT_API_KEY }}
   REVENUECAT_WEBHOOK_SECRET: ${{ secrets.REVENUECAT_WEBHOOK_SECRET }}
