--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -55,11 +55,14 @@
     "@tanstack/svelte-table": "^8.15.3",
     "ai": "^3.0.16",
     "autosize": "^6.0.1",
+    "bits-ui": "^0.21.1",
     "dayjs": "^1.11.10",
     "fast-xml-parser": "^4.3.6",
     "graphql-request": "^6.1.0",
+    "lucide-svelte": "^0.364.0",
     "marked": "^12.0.1",
     "stripe": "^14.23.0",
+    "tailwind-variants": "^0.2.1",
     "uuid": "^9.0.1",
     "validator": "^13.11.0"
   }
