--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@aws-sdk/client-ses": "^3.654.0",
     "@aws-sdk/client-sqs": "^3.654.0",
     "@aws-sdk/s3-request-presigner": "^3.654.0",
-    "@libsql/client": "^0.13.0",
+    "@libsql/client": "0.10.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.0",
     "ai": "^3.3.43",
