--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "biome format --write .",
     "lint:fix": "biome lint --write .",
     "lint": "biome lint .",
+    "postinstall": "sst install",
     "predeploy": "bun run format && bun run lint:fix",
     "refresh": "sst refresh",
     "remove": "sst remove",
