--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -9,12 +9,6 @@ runs:
       with:
         bun-version: latest
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Cache Bun
       uses: actions/cache@v4
       with:
@@ -31,7 +25,7 @@ runs:
         restore-keys: |
           ${{ runner.os }}-sst-
 
-    - name: Cache Turbo Build
+    - name: Cache TurboRepo
       uses: actions/cache@v4
       with:
         path: .turbo
