--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -33,6 +33,14 @@ runs:
         restore-keys: |
           ${{ runner.os }}-turbo-
 
+    - name: Cache Docker Buildx from SST
+      uses: actions/cache@v4
+      with:
+        path: /tmp/buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
     - name: Install dependencies
       shell: bash
       run: |
