--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format": "biome format --write .",
     "lint:fix": "biome lint --write .",
     "lint": "biome lint .",
-    "prerelease": "bun run format && bun run lint:fix",
+    "prerelease": "bun run type-check && bun run format && bun run lint:fix",
     "refresh": "sst refresh",
     "remove": "sst remove",
     "scripts": "sst shell -- bun run ./tools/scripts/src/index.ts",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.9.2",
     "@types/bun": "^1.1.10",
-    "@types/node": "^22.7.0",
+    "@types/node": "^22.7.3",
     "drizzle-kit": "^0.24.2",
     "rimraf": "^6.0.1",
     "turbo": "^2.1.2",
@@ -40,19 +40,19 @@
     "vitest": "^2.1.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.658.0",
-    "@aws-sdk/client-ses": "^3.658.0",
-    "@aws-sdk/client-sqs": "^3.658.0",
-    "@aws-sdk/s3-request-presigner": "^3.658.0",
+    "@aws-sdk/client-s3": "^3.658.1",
+    "@aws-sdk/client-ses": "^3.658.1",
+    "@aws-sdk/client-sqs": "^3.658.1",
+    "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@libsql/client": "0.14.0",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.0",
-    "ai": "^3.4.2",
+    "ai": "^3.4.4",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "lucia": "^3.2.0",
-    "sst": "3.1.38",
+    "sst": "3.1.39",
     "stripe": "^16.12.0",
     "zod": "^3.23.8"
   },
